    containing the linkprop object.

 ** isprime has been extended to operate on negative and complex inputs.

 ** The new warning ID "Octave:data-file-in-path" replaces the three
    previous separate warning IDs "Octave:fopen-file-in-path",
    "Octave:load-file-in-path", and "Octave:md5sum-file-in-path".

 ** Other new functions added in 4.2:

      bandwidth
      dir_in_loadpath
      hgload
      hgsave
      ichol
      ilu
      isbanded
      isdiag
      istril
      istriu
      javachk
      linkaxes
      lscov
      numfields
      rotate
      sylvester
      zoom

 ** inline() scheduled for eventual deprecation by Matlab

    Functions created through the use of inline are scheduled for deprecation
    by Matlab.  When this occurs Octave will continue to support inline
    functions for an indeterminate amount of time before also removing support.
    All new code should use anonymous functions in place of inline functions. 

 ** Deprecated functions.

    The following functions have been deprecated in Octave 4.2 and will
    be removed from Octave 4.6 (or whatever version is the second major
    release after 4.2):

      Function           | Replacement
      -------------------|------------------
      bicubic            | interp2
      find_dir_in_path   | dir_in_loadpath
      finite             | isfinite
      fmod               | rem
      fnmatch            | glob or regexp
      nfields            | numfields
      syl                | sylvester
      usage              | print_usage

    The following functions were deprecated in Octave 3.8 and have been
    removed from Octave 4.2.

      default_save_options    java_new
      gen_doc_cache           java_unsigned_conversion
      interp1q                javafields
      isequalwithequalnans    javamethods
      java_convert_matrix     re_read_readline_init_file
      java_debug              read_readline_init_file
      java_invoke             saving_history
