@@ -68,6 +68,7 @@ Summary of important user-visible changes for version 4.2:
 
       bandwidth
       dir_in_loadpath
+      flip
       hgload
       hgsave
       ichol
@@ -102,6 +103,7 @@ Summary of important user-visible changes for version 4.2:
       bicubic            | interp2
       find_dir_in_path   | dir_in_loadpath
       finite             | isfinite
+      flipdim            | flip
       fmod               | rem
       fnmatch            | glob or regexp
       nfields            | numfields
@@ -133,6 +135,12 @@ Summary of important user-visible changes for version 4.2:
     The internal class <Octave_map> was deprecated in Octave 3.8 and has
     been removed from Octave 4.2.  Replacement classes are
     <octave_map> (struct array) or <octave_scalar_map> for a single structure.
+
+ ** The following functions have now support for N-dimensional arrays:
+
+      fliplr
+      flipud
+
 
 Summary of important user-visible changes for version 4.0:
 ---------------------------------------------------------
